# pr-dl

./: .gitignore  MANIFEST.in  Makefile  README.md  pr-dl-cli.py  prdl.py  prdl.spec  prdl_gui.py  prdl_gui.spec  prdl_gui.ui  prdlcli.py  pyproject.toml  requirements.txt  setup.py
.run/: automatic_tests.run.xml  download_podcast.run.xml  download_podcasts.run.xml  download_podcasts_audiobook.run.xml  download_podcasts_page_type1.run.xml  download_podcasts_page_type2.run.xml  download_podcasts_page_type3.run.xml  gui.run.xml  search_podcast.run.xml
pr-dl/: pr-dl-cli.py
prdl/: domains.py  kbhit.py  logger.py  prdl.py  prdlcli.py
tests/: test_prdl.py
tests/data/: audiobook.html  jedynka.html  page1.html  page2.html  page3.html  page4.html  page5.html  page_with_attachments.html  polskieradio24.html
