[project]
name = "prdl"
version = "0.9.1"
description = "Polish Radio Downloader"
authors = [{ name = "Bohdan Bobrowski", email = "bohdanbobrowski@gmail.com" }]
license = { file = "LICENSE" }
keywords = [

]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml",
    "eyed3",
    "python-slugify",
    "pycurl",
    "Pillow",
    "clint",
    "download",
    "validators",
    "Requests",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pipreqs",
]

[project.scripts]
prdl = "prdl.prdlcli:main"

[tool.setuptools]
packages = [
    "prdl",
]

[tool.setuptools.package-dir]
blog2epub = "prdl"

[tool.setuptools.package-data]
assets = ["*.jpg"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
ignore = ["E501"]

[tool.mypy]
exclude = ["venv", "dist", "build"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
